--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,5 +3,8 @@ body {
     margin: 0;
 }
 .x-page-frame {
-    background-color: #fff;
+    height: 500px;
+    text-align: center;
+    color: #fff;
+    background-color: #cb3837;
 }
